# stereo-cam

./: CMakeLists.txt  README.md  event_loop.h  loop.cpp  meson.build  package.xml  stereo.cpp
config/: StereoCalibration.yaml  camera_params.yaml  left_camera_info.yaml  right_camera_info.yaml  stella.yaml
include/stereo_cam/: calib_utils.hpp  depth_node.hpp  icm20948.hpp  stereo_node.hpp
launch/: stella_slam.launch.py  stereo_calib.launch.py  stereo_cam.launch.py
scripts/: cap.py
src/: calib_utils.cpp  depth_node.cpp  icm20948.cpp  mag_viz_node.cpp  main.cpp  stereo_calib.cpp  stereo_node.cpp
urdf/: stereo_camera.urdf.xacro
