<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stereo_cam</name>
  <version>0.0.1</version>
  <description>A ROS 2 node for capturing and publishing synchronized stereo images using dual IMX219-83 cameras</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>GPL-2.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>

  <build_depend>libcamera-dev</build_depend>
  <build_depend>libevent-dev</build_depend>

  <exec_depend>libcamera</exec_depend>
  <exec_depend>libevent</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
